--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
 		<p>because I enjoyed analyzing and drawing circuits.</p>
 		<p>I would say that my favorite programming language would be</p>
 		<h3>Python</h3>
-		<p>because it's the language that's the closest to simple English.</p>
-		<p>My favorite food would be my comfort food,</p>
+		<p>because it's the language that's the closest to simple English.</p>                 	<p>My favorite food would be my comfort food,</p>
 		<h3>Mac and Cheese</h3>
+		<p>My hobbies are</p>
+		<h3>reading, writing, and watching</h3>
+		<p>My childhood dream was to be an</p>
+		<h3>astronaut</h3>
 	</body>
 </html>
