--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
-		<p>Hello to you! My</p>
+		<p>Hello to you! My name is</p>
 		<h2>MEGAN ECHANO</h2>
 		<p>You can call me Meg.</p>
 		<p>My favorite Computer Science subject so far is</p>
