--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Meet meggymogu</title>
+		<title></title>
 		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
-		<p>Hello to you! My name is</p>
-		<h2>MEGAN ECHANO</h2>
-		<p>You can call me Meg.</p>
-		<p>My favorite Computer Science subject so far is</p>
-		<h3>CMSC 130</h3>
+		<p>Hello applicant!</p>
+<!-- 		<h2>MEGAN ECHANO</h2> -->
+		<p>I am Megan Echano. You can call me Meg... or Ate Meg (oh noes, thunders)...</p>
+		<p>next time na lang yung Tita Gem uwu :></p>
+<!-- 		<h3>CMSC 130</h3> -->
 		<p>because I enjoyed analyzing and drawing circuits.</p>
 		<p>I would say that my favorite programming language would be</p>
-		<h3>Python</h3>
+<!-- 		<h3>Python</h3> -->
 		<p>because it's the language that's the closest to simple English.</p>
 		<p>My favorite food would be my comfort food,</p>
-		<h3>Mac and Cheese</h3>
+<!-- 		<h3>Mac and Cheese</h3> -->
 	</body>
 </html>
