--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title></title>
 		<link rel="stylesheet" href="style.css">
 	</head>
-	<body>
+	<body style="background-color:black;text-align:center">
 		<p>Hello applicant!</p>
 <!-- 		<h2>MEGAN ECHANO</h2> -->
 		<p>I am Megan Echano. You can call me Meg... or Ate Meg (oh noes, thunders)...</p>
