--- a/index.html
+++ b/index.html
@@ -1,20 +1,30 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title></title>
+		<title>Scribe Reporting</title>
 		<link rel="stylesheet" href="style.css">
 	</head>
 	<body style="background-color:black;text-align:center">
+		<p></p>
 		<p>Hello applicant!</p>
-<!-- 		<h2>MEGAN ECHANO</h2> -->
-		<p>I am Megan Echano. You can call me Meg... or Ate Meg (oh noes, thunders)...</p>
-		<p>next time na lang yung Tita Gem uwu :></p>
-<!-- 		<h3>CMSC 130</h3> -->
-		<p>because I enjoyed analyzing and drawing circuits.</p>
-		<p>I would say that my favorite programming language would be</p>
-<!-- 		<h3>Python</h3> -->
-		<p>because it's the language that's the closest to simple English.</p>
-		<p>My favorite food would be my comfort food,</p>
-<!-- 		<h3>Mac and Cheese</h3> -->
+		<p></p>
+		<p>I am Megan Echano. You can call me Meg or Ate Meg.</p>
+		<p>I'm a third year BS Computer Science student.</p>
+		<p>and the incumbent Scribe (or secretary) of UP Peninsulares.</p>
+		<p>For the reporting, I'd prefer it if you report to me by pair.</p>
+		<p>But if you want to meet me alone, why not?</p>
+		<p></p>
+		<p>Scribe Reporting Hours:</p>
+		<p>MONDAY, 15:00-17:00, 20:00-21:00</p>
+		<p>TUESDAY - SATURDAY, 14:00-17:00, 20:00-21:00</p>
+		<p>No reportings on Sunday.</p>
+		<p></p>
+		<p>Facebook: facebook.com/themeggymogu</p>
+		<p>Aside from setting the event on Google Calendar,</p>
+		<p>please message me on Facebook Messenger at least 30 minutes before the reporting</p>
+		<p>or if you have any concern at all.</p>
+		<p></p>
+		<p>Lastly, please don't mind the design of this website. T___T</p>
+		<p>I swear, I've already created my own version of Facebook.</p>
 	</body>
 </html>
