--- a/index.html
+++ b/index.html
@@ -6,25 +6,25 @@
 	</head>
 	<body style="background-color:black;text-align:center">
 		<p></p>
-		<p>Hello applicant!</p>
+		<p class="line-1 anim-typewriter">Hello applicant!</p>
 		<p></p>
-		<p>I am Megan Echano. You can call me Meg or Ate Meg.</p>
-		<p>I'm a third year BS Computer Science student.</p>
-		<p>and the incumbent Scribe (or secretary) of UP Peninsulares.</p>
-		<p>For the reporting, I'd prefer it if you report to me by pair.</p>
-		<p>But if you want to meet me alone, why not?</p>
+		<p class="line-1 anim-typewriter">I am Megan Echano. You can call me Meg or Ate Meg.</p>
+		<p class="line-1 anim-typewriter">I'm a third year BS Computer Science student.</p>
+		<p class="line-1 anim-typewriter">and the incumbent Scribe (or secretary) of UP Peninsulares.</p>
+		<p class="line-1 anim-typewriter">For the reporting, I'd prefer it if you report to me by pair.</p>
+		<p class="line-1 anim-typewriter">But if you want to meet me alone, why not?</p>
 		<p></p>
-		<p>Scribe Reporting Hours:</p>
-		<p>MONDAY, 15:00-17:00, 20:00-21:00</p>
-		<p>TUESDAY - SATURDAY, 14:00-17:00, 20:00-21:00</p>
-		<p>No reportings on Sunday.</p>
+		<p class="line-1 anim-typewriter">Scribe Reporting Hours:</p>
+		<p class="line-1 anim-typewriter">MONDAY, 15:00-17:00, 20:00-21:00</p>
+		<p class="line-1 anim-typewriter">TUESDAY - SATURDAY, 14:00-17:00, 20:00-21:00</p>
+		<p class="line-1 anim-typewriter">No reportings on Sunday.</p>
 		<p></p>
-		<p>Facebook: facebook.com/themeggymogu</p>
-		<p>Aside from setting the event on Google Calendar,</p>
-		<p>please message me on Facebook Messenger at least 30 minutes before the reporting</p>
-		<p>or if you have any concern at all.</p>
+		<p class="line-1 anim-typewriter">Facebook: facebook.com/themeggymogu</p>
+		<p class="line-1 anim-typewriter">Aside from setting the event on Google Calendar,</p>
+		<p class="line-1 anim-typewriter">please message me on Facebook Messenger at least 30 minutes before the reporting</p>
+		<p class="line-1 anim-typewriter">or if you have any concern at all.</p>
 		<p></p>
-		<p>Lastly, please don't mind the design of this website. T___T</p>
-		<p>I swear, I've already created my own version of Facebook.</p>
+		<p class="line-1 anim-typewriter">Lastly, please don't mind the design of this website. T___T</p>
+		<p class="line-1 anim-typewriter">I swear, I've already created my own version of Facebook.</p>
 	</body>
 </html>
