--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<p></p>
 		<p class="line-1 anim-typewriter">I am Megan Echano. You can call me Meg or Ate Meg.</p>
 		<p class="line-1 anim-typewriter">I'm a third year BS Computer Science student.</p>
-		<p class="line-1 anim-typewriter">and the incumbent Scribe (or secretary) of UP Peninsulares.</p>
+		<p class="line-1 anim-typewriter">and the incumbent Scribe (or secretary) of UP Peninsulares</p>
 		<p class="line-1 anim-typewriter">For the reporting, I'd prefer it if you report to me by pair.</p>
 		<p class="line-1 anim-typewriter">But if you want to meet me alone, why not?</p>
 		<p></p>
