--- a/index.html
+++ b/index.html
@@ -5,32 +5,23 @@
 		<link rel="stylesheet" href="style.css">
 	</head>
 	<body style="background-color:black;text-align:center">
-		<br></br>
 		<p class="line-1 anim-typewriter">Hello applicant!</p>
-		<br></br>
 		<p class="line-1 anim-typewriter">I am Megan Echano.</p>
 		<p class="line-1 anim-typewriter">You can call me Meg or Ate Meg.</p>
-		<p class="line-1 anim-typewriter">I'm a third year BS Computer Science student</p>
-		<p class="line-1 anim-typewriter">and the incumbent Scribe of UP Peninsulares.</p>
+		<p class="line-1 anim-typewriter">I'm a junior BS Computer Science student</p>
+		<p class="line-1 anim-typewriter">and the incumbent Scribe of UPP.</p>
 		<p class="line-1 anim-typewriter">For the reporting,</p>
 		<p class="line-1 anim-typewriter">I'd prefer it if you report to me by pair.</p>
 		<p class="line-1 anim-typewriter">But if you want to meet me alone, why not?</p>
-		<br></br>
 		<p class="line-1 anim-typewriter">Scribe Reporting Hours:</p>
 		<p class="line-1 anim-typewriter">MONDAY</p>
 		<p class="line-1 anim-typewriter">15:00-17:00, 20:00-21:00</p>
 		<p class="line-1 anim-typewriter">TUESDAY - SATURDAY</p>
 		<p class="line-1 anim-typewriter">14:00-17:00, 20:00-21:00</p>
 		<p class="line-1 anim-typewriter">No reportings on Sunday.</p>
-		<br></br>
-		<p class="line-1 anim-typewriter">Facebook: facebook.com/themeggymogu</p>
-		<p class="line-1 anim-typewriter">Aside from setting the event on Google Calendar,</p>
+		<p class="line-1 anim-typewriter">Aside from setting the event</p>
+		<p class="line-1 anim-typewriter">on Google Calendar,</p>
 		<p class="line-1 anim-typewriter">please message me on Facebook Messenger</p>
-		<p class="line-1 anim-typewriter">at least 30 minutes before the reporting</p>
-		<p class="line-1 anim-typewriter">or if you have any concern at all.</p>
-		<br></br>
-		<p class="line-1 anim-typewriter">P.S. Don't mind the design of this website. T___T</p>
-		<p class="line-1 anim-typewriter">I swear, I've already created</p>
-		<p class="line-1 anim-typewriter">my own version of Facebook.</p>
+		<p class="line-1 anim-typewriter">at least 30 minutes before the reporting.</p>
 	</body>
 </html>
