--- a/index.html
+++ b/index.html
@@ -23,5 +23,6 @@
 		<p class="line-1 anim-typewriter">on Google Calendar,</p>
 		<p class="line-1 anim-typewriter">please message me on Facebook Messenger</p>
 		<p class="line-1 anim-typewriter">at least 30 minutes before the reporting.</p>
+		<p class="line-1 anim-typewriter">See you!</p>
 	</body>
 </html>
