--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<p class="line-1 anim-typewriter">and the incumbent Scribe of UPP.</p>
 		<br></br>
 		<p class="line-1 anim-typewriter">For the reporting,</p>
-		<p class="line-1 anim-typewriter">I'd prefer it if you report to me by pair.</p>
+		<p class="line-1 anim-typewriter">I'd prefer it if you reported to me by pair.</p>
 		<p class="line-1 anim-typewriter">But if you want to meet me alone, why not?</p>
 		<br></br>
 		<p class="line-1 anim-typewriter">Scribe Reporting Hours:</p>
@@ -26,6 +26,8 @@
 		<p class="line-1 anim-typewriter">Aside from setting the event</p>
 		<p class="line-1 anim-typewriter">on Google Calendar,</p>
 		<p class="line-1 anim-typewriter">please message me on Facebook Messenger</p>
+		<a href="facebook.com/themeggymogu" class="line-1 anim-typewriter">facebook.com/themeggymogu</a>
+		<p class="line-1 anim-typewriter">or text me at 09568494973</p>
 		<p class="line-1 anim-typewriter">at least 30 minutes before the reporting.</p>
 		<p class="line-1 anim-typewriter">See you!</p>
 	</body>
