--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<p class="line-1 anim-typewriter">Aside from setting the event</p>
 		<p class="line-1 anim-typewriter">on Google Calendar,</p>
 		<p class="line-1 anim-typewriter">please message me on Facebook Messenger</p>
-		<a href="facebook.com/themeggymogu" class="line-1 anim-typewriter">facebook.com/themeggymogu</a>
+		<p class="line-1 anim-typewriter">facebook.com/themeggymogu</p>
 		<p class="line-1 anim-typewriter">or text me at 09568494973</p>
 		<p class="line-1 anim-typewriter">at least 30 minutes before the reporting.</p>
 		<p class="line-1 anim-typewriter">See you!</p>
