--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 		<p class="line-1 anim-typewriter">TUESDAY - SATURDAY</p>
 		<p class="line-1 anim-typewriter">14:00-17:00, 20:00-21:00</p>
 		<p class="line-1 anim-typewriter">No reportings on Sunday.</p>
+		<p class="line-1 anim-typewriter">This schedule is subject to change.</p>
 		<br></br>
 		<p class="line-1 anim-typewriter">Aside from setting the event</p>
 		<p class="line-1 anim-typewriter">on Google Calendar,</p>
